--- a/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
+++ b/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
@@ -175,6 +175,10 @@
     <Compile Include="Migrations\202503100906599_UpdateDB.Designer.cs">
       <DependentUpon>202503100906599_UpdateDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503130200124_Uo.cs" />
+    <Compile Include="Migrations\202503130200124_Uo.Designer.cs">
+      <DependentUpon>202503130200124_Uo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\BuoiHoc.cs" />
@@ -476,6 +480,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202503100906599_UpdateDB.resx">
       <DependentUpon>202503100906599_UpdateDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503130200124_Uo.resx">
+      <DependentUpon>202503130200124_Uo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
