--- a/QuanLyThongTinDaoTao/Web.config
+++ b/QuanLyThongTinDaoTao/Web.config
@@ -4,6 +4,7 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -13,12 +14,35 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		  <add key="webpages:Version" value="3.0.0.0" />
+		  <add key="webpages:Enabled" value="false" />
+		  <add key="ClientValidationEnabled" value="true" />
+		  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		  <add key="EmailUsername" value="tn216003@gmail.com" />
+		  <add key="EmailPassword" value="yltr uivx kovk owwc" />
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
+
+	  <!-- Forms Authentication -->
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Account/Login" timeout="2880" />
+	  </authentication>
+
+	  <authorization>
+		  <allow users="*" />
+	  </authorization>
+	  
   </system.web>
-  
+	<system.net>
+		<mailSettings>
+			<smtp from="tn216003@gmail.com">
+				<network host="smtp.gmail.com" port="587" userName="tn216003@gmail.com" password="yltr uivx kovk owwc" enableSsl="true" />
+			</smtp>
+		</mailSettings>
+	</system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -65,9 +89,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-	<connectionStrings>
-		<add name="DbContextThongTinDaoTao" connectionString="Data Source=LAPTOP-VD2GI1QP;Initial Catalog =ThongTinDaoTao;Integrated Security=True;Integrated Security=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+<connectionStrings>
+  <add name="DbContextThongTinDaoTao" connectionString="Data Source=LAPTOP-VD2GI1QP;Initial Catalog=ThongTinDaoTao;Integrated Security=True" providerName="System.Data.SqlClient" />
+</connectionStrings>
+
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
@@ -80,4 +105,6 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-</system.webServer></configuration>
+</system.webServer>
+
+</configuration>
