--- a/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
+++ b/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
@@ -196,6 +196,14 @@
     <Compile Include="Migrations\202503140233557_1403.Designer.cs">
       <DependentUpon>202503140233557_1403.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503160451297_1603.cs" />
+    <Compile Include="Migrations\202503160451297_1603.Designer.cs">
+      <DependentUpon>202503160451297_1603.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503160516313_16GV.cs" />
+    <Compile Include="Migrations\202503160516313_16GV.Designer.cs">
+      <DependentUpon>202503160516313_16GV.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelsService\LoginViewModel.cs" />
     <Compile Include="ModelsService\RegisterViewModel.cs" />
@@ -205,10 +213,12 @@
     <Compile Include="Models\DbContextThongTinDaoTao.cs" />
     <Compile Include="Models\DiemDanh.cs" />
     <Compile Include="Models\GiangVien.cs" />
+    <Compile Include="Models\HinhAnh.cs" />
     <Compile Include="Models\HocVien.cs" />
     <Compile Include="Models\KhoaHoc.cs" />
     <Compile Include="Models\LopHoc.cs" />
     <Compile Include="Models\NguoiDung.cs" />
+    <Compile Include="Models\TaiLieu.cs" />
     <Compile Include="Models\ThongBao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EmailService.cs" />
@@ -2327,6 +2337,9 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Upload\BuoiHoc\" />
+    <Folder Include="Upload\KhoaHoc\" />
+    <Folder Include="Upload\LopHoc\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
@@ -2367,6 +2380,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503140233557_1403.resx">
       <DependentUpon>202503140233557_1403.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503160451297_1603.resx">
+      <DependentUpon>202503160451297_1603.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503160516313_16GV.resx">
+      <DependentUpon>202503160516313_16GV.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
