--- a/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
+++ b/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
@@ -216,15 +216,18 @@
     <Compile Include="ModelsService\LoginViewModel.cs" />
     <Compile Include="ModelsService\RegisterViewModel.cs" />
     <Compile Include="Models\Admin.cs" />
+    <Compile Include="Models\Attachment.cs" />
     <Compile Include="Models\BuoiHoc.cs" />
+    <Compile Include="Models\BuoiHocAttachment.cs" />
     <Compile Include="Models\DangKyHoc.cs" />
     <Compile Include="Models\DbContextThongTinDaoTao.cs" />
     <Compile Include="Models\DiemDanh.cs" />
     <Compile Include="Models\GiangVien.cs" />
-    <Compile Include="Models\HinhAnh.cs" />
     <Compile Include="Models\HocVien.cs" />
     <Compile Include="Models\KhoaHoc.cs" />
+    <Compile Include="Models\KhoaHocAttachment.cs" />
     <Compile Include="Models\LopHoc.cs" />
+    <Compile Include="Models\LopHocAttachment.cs" />
     <Compile Include="Models\NguoiDung.cs" />
     <Compile Include="Models\TaiLieu.cs" />
     <Compile Include="Models\ThongBao.cs" />
