--- a/QuanLyThongTinDaoTao/Web.config
+++ b/QuanLyThongTinDaoTao/Web.config
@@ -22,20 +22,23 @@
 		  <add key="EmailPassword" value="yltr uivx kovk owwc" />
 
   </appSettings>
-  <system.web>
-    <compilation debug="true" targetFramework="4.8.1" />
-    <httpRuntime targetFramework="4.8.1" />
+	<system.web>
+		<!-- Tăng giới hạn dung lượng file upload lên 1GB -->
+		<httpRuntime maxRequestLength="1048576" targetFramework="4.8.1" />
 
-	  <!-- Forms Authentication -->
-	  <authentication mode="Forms">
-		  <forms loginUrl="~/Account/Login" timeout="2880" />
-	  </authentication>
+		<!-- Debugging -->
+		<compilation debug="true" targetFramework="4.8.1" />
 
-	  <authorization>
-		  <allow users="*" />
-	  </authorization>
-	  
-  </system.web>
+		<!-- Forms Authentication -->
+		<authentication mode="Forms">
+			<forms loginUrl="~/Account/Login" timeout="2880" />
+		</authentication>
+
+		<authorization>
+			<allow users="*" />
+		</authorization>
+	</system.web>
+
 	<system.net>
 		<mailSettings>
 			<smtp from="tn216003@gmail.com">
@@ -99,6 +102,12 @@
     </providers>
   </entityFramework>
 <system.webServer>
+	<security>
+		<requestFiltering>
+			<requestLimits maxAllowedContentLength="1073741824" />
+			<!-- Giới hạn 1GB (1073741824 bytes) -->
+		</requestFiltering>
+	</security>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
