--- a/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
+++ b/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
@@ -62,6 +62,12 @@
     <Reference Include="Newtonsoft.Json.Bson, Version=1.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.Bson.1.0.2\lib\net45\Newtonsoft.Json.Bson.dll</HintPath>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="QRCoder, Version=1.6.0.0, Culture=neutral, PublicKeyToken=c4ed5b9ae8358a28, processorArchitecture=MSIL">
@@ -172,6 +178,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\BuoiHocController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\KhoaHocController.cs" />
     <Compile Include="Areas\Admin\Controllers\LopHocController.cs" />
@@ -253,6 +260,14 @@
     <Compile Include="Migrations\202503211008019_505s.cs" />
     <Compile Include="Migrations\202503211008019_505s.Designer.cs">
       <DependentUpon>202503211008019_505s.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503240339454_2403.cs" />
+    <Compile Include="Migrations\202503240339454_2403.Designer.cs">
+      <DependentUpon>202503240339454_2403.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503240807384_202356.cs" />
+    <Compile Include="Migrations\202503240807384_202356.Designer.cs">
+      <DependentUpon>202503240807384_202356.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelsService\LoginViewModel.cs" />
@@ -423,6 +438,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -619,6 +635,11 @@
     <Content Include="Areas\Asset\scss\bootstrap\scss\_utilities.scss" />
     <Content Include="Areas\Asset\scss\bootstrap\scss\_variables.scss" />
     <Content Include="Areas\Admin\Views\LopHoc\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\BuoiHoc\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\LopHoc\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\BuoiHoc\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\BuoiHoc\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\LopHoc\DanhSachBuoiHoc.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -736,6 +757,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503211008019_505s.resx">
       <DependentUpon>202503211008019_505s.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503240339454_2403.resx">
+      <DependentUpon>202503240339454_2403.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503240807384_202356.resx">
+      <DependentUpon>202503240807384_202356.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
