--- a/QuanLyThongTinDaoTao/packages.config
+++ b/QuanLyThongTinDaoTao/packages.config
@@ -21,6 +21,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net481" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net481" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net481" />
   <package id="QRCoder" version="1.6.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.Memory" version="4.5.5" targetFramework="net481" />
