--- a/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
+++ b/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Areas\Admin\Controllers\HomeAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\KhoaHocController.cs" />
     <Compile Include="Areas\Admin\Controllers\LopHocController.cs" />
+    <Compile Include="Areas\Admin\Controllers\HocVienController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -268,6 +269,10 @@
     <Compile Include="Migrations\202503240807384_202356.cs" />
     <Compile Include="Migrations\202503240807384_202356.Designer.cs">
       <DependentUpon>202503240807384_202356.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503270232351_270dahwuq.cs" />
+    <Compile Include="Migrations\202503270232351_270dahwuq.Designer.cs">
+      <DependentUpon>202503270232351_270dahwuq.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelsService\LoginViewModel.cs" />
@@ -640,6 +645,8 @@
     <Content Include="Areas\Admin\Views\BuoiHoc\Create.cshtml" />
     <Content Include="Areas\Admin\Views\BuoiHoc\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\LopHoc\DanhSachBuoiHoc.cshtml" />
+    <Content Include="Areas\Admin\Views\HocVien\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\HocVien\Create.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -763,6 +770,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503240807384_202356.resx">
       <DependentUpon>202503240807384_202356.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503270232351_270dahwuq.resx">
+      <DependentUpon>202503270232351_270dahwuq.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
