--- a/QuanLyThongTinDaoTao/Web.config
+++ b/QuanLyThongTinDaoTao/Web.config
@@ -20,7 +20,8 @@
 		  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		  <add key="EmailUsername" value="tn216003@gmail.com" />
 		  <add key="EmailPassword" value="yltr uivx kovk owwc" />
-
+	      <add key="SmtpHost" value="smtp.gmail.com" />
+	      <add key="SmtpPort" value="587" />
   </appSettings>
 	<system.web>
 		<!-- Tăng giới hạn dung lượng file upload lên 1GB -->
